--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.3",
+    "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
